--- a/acquire.ipynb
+++ b/acquire.ipynb
@@ -215,8 +215,10 @@
    "source": [
     "def get_items():\n",
     "    '''\n",
-    "    returns dataframe of all items\n",
+    "    returns dataframe of all items from cached csv or writes a new data frame \n",
+    "    of all items to a csv and caches it to the system.\n",
     "    '''\n",
+    "    # Cache the stuff or read from cache\n",
     "    if os.path.isfile('items.csv'):\n",
     "        df = pd.read_csv('items.csv')\n",
     "        return df\n",
